# django-ui.com

./: .editorconfig  .gitignore  LICENSE.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js
core/: settings.py  urls.py
docs/: README.md
frontend/: urls.py  views.py
frontend/templates/components/: footer.html  navbar.html
frontend/templates/frontend/: home.html
frontend/templates/pages/: home.html
frontend/templates/pages/tailwind/: borders.html  core-concepts.html  layout.html  sizing.html  spacing.html  temp.html  typography.html
static/css/: output.css
tailwind/borders/: index.html
tailwind/core-concepts/: index.html
tailwind/layout/: index.html
tailwind/sizing/: index.html
tailwind/spacing/: index.html
tailwind/typography/: index.html
templates/: base.html
